# soc_determinants

./: .gitignore  README.md  pyproject.toml  submission_format.csv  test_features.csv  train_features.csv  train_labels.csv
