[project]
name = "soc-determinants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightgbm>=4.5.0",
    "nbformat>=5.10.4",
    "optuna-integration[lightgbm]>=4.1.0",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.6.0",
    "ipywidgets>=8.1.5",
    "joblib>=1.4.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
